--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=webexApi
-webex.client-id=clientID
-webex.client-secret=client-secret
+webex.client-id=
+webex.client-secret=
 webex.redirect-uri=http://localhost:3000/webex/oauth
-webex.scope=spark-compliance:memberships_read spark-compliance:meetings_write spark-compliance:memberships_write spark-compliance:meetings_read spark-compliance:webhooks_write spark-compliance:events_read spark-compliance:recordings_write spark-compliance:rooms_read spark-compliance:team_memberships_read spark-compliance:webhooks_read spark-compliance:messages_write spark-compliance:team_memberships_write spark:kms spark-compliance:teams_read spark-compliance:rooms_write spark-compliance:messages_read spark-compliance:recordings_read
+webex.scope=spark:all meeting:schedules_read meeting:schedules_write meeting:participants_read meeting:participants_write meeting:controls_read meeting:controls_write
 server.port=3000
 
